# glance

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  ansible.cfg  compose.yml  deploy.yml  docker-bake.hcl  docker-compose.yml  hosts.example  pyproject.toml  taskfile.yml
config/: glance.yml  home.yml  home.yml.example  reddit.yml  releases.yml  repos.yml  rss.yml  stocks.yml  twitch.yml  videos.yml  widgets.yml
taskfiles/: docker.yml  uc.yml
