[project]
name = "glance"
version = "0.1.0"
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.19.0rc1",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=25.6.1",
]
